--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
         
             <nav class="navbar">
                 <a href="#" class="active">Home</a>
-                <a href="https://vandalsuidaho-my.sharepoint.com/:w:/r/personal/gome2670_vandals_uidaho_edu/Documents/Dylan%27s%20Resume%20-%20Copy%20newest.docx?d=w1b4f727a8d0e4df0becf639e09df0b2b&csf=1&web=1&e=0NpEhV" target="_blank">Resume</a>
-                <a href="https://vandalsuidaho-my.sharepoint.com/:w:/r/personal/gome2670_vandals_uidaho_edu/Documents/Dylan%27s%20Resume%20-%20Copy%20newest.docx?d=w1b4f727a8d0e4df0becf639e09df0b2b&csf=1&web=1&e=0NpEhV" target="_blank"> Projects</a>
-                <a href="https://vandalsuidaho-my.sharepoint.com/:w:/r/personal/gome2670_vandals_uidaho_edu/Documents/Email%20dmgomezschool@gmail.docx?d=w2873ce36b3a64ba7a8d2ad80e36d453a&csf=1&web=1&e=wp51r8" target="_blank">Contact Me</a>
+                <a href="about.html">About</a>
+                <a href="portfolio.html" target="_blank">Portfolio</a>
+                <a href="contact.html">Contact Me</a>
+                <a href="signin.html" target ="_blank">Sign in</a>
+                <a href="signUp.html" target ="_blank">Sign Up</a>
             </nav>
 
     </header>
+
     <section class="home">
         <div class="content">
             <h1> Hi </h1>
@@ -33,6 +36,11 @@
 
             </div>
 </section>
+<nav class="footer">
+    <a href="term.html">Terms and Conditions</a>
+    <a href="privacy.html">Privacy Policy</a>
+    <a href="cookie.html">Cookie Policy</a>
+</nav>
 </body>
 
 
